objects/PROSAgreement__Agreement_Setup__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__Document_Generation_Type__c</fullName>
        <label>Document Generation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Pending_Process_MPC_Grid_Config__c</fullName>
        <description>Used to store the serialized json of selected MPCI Columns</description>
        <label>Pending Process MPC Grid Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Processed_MPC_Grid_Config__c</fullName>
        <label>Processed MPC Grid Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Use_Custom_Agreement_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Agreement Object</label>
        <type>Checkbox</type>
    </fields>
    <label>PROS Agreement Setup</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreement Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>